<resources>
    <string name="app_name">AddressBookApp</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="menuitem_back">Back</string>
    <string name="hint_name_required">Name (Required)</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_street">Street</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip</string>
    <string name="label_name">Name:</string>
    <string name="label_email">E-Mail:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_street">Street:</string>
    <string name="label_city">City:</string>
    <string name="label_state">State:</string>
    <string name="label_zip">Zip:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the contact</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="contact_added">Contact added successfully</string>
    <string name="contact_not_added">Contact was not added due to an error</string>
    <string name="contact_updated">Contact updated</string>
    <string name="contact_not_updated">Contact was not updated due to an error</string>
    <string name="invalid_query_uri">Invalid query Uri:</string>
    <string name="invalid_insert_uri">Invalid insert Uri:</string>
    <string name="invalid_update_uri">Invalid update Uri:</string>
    <string name="invalid_delete_uri">Invalid delete Uri:</string>
    <string name="insert_failed">Insert failed: s</string>
    <string name="add_contact_button_description">Añadir un nuevo contacto</string>

    <string name="error_name_required">El nombre es obligatorio</string>
    <string name="error_email_invalid">El correo no tiene un formato válido</string>
    <string name="error_phone_required">El teléfono es obligatorio</string>
    <string name="error_phone_10_digits">El teléfono debe tener exactamente 10 dígitos</string>
    <string name="error_zip_required">El ZIP es obligatorio</string>
    <string name="error_zip_5_digits">El ZIP debe tener exactamente 5 dígitos</string>
    <string name="form_has_errors">Revisa los campos marcados</string>

    <string name="snackbar_contact_deleted">Contacto eliminado</string>
    <string name="snackbar_undo">DESHACER</string>

    <string name="unsaved_changes_title">Cambios no guardados</string>
    <string name="unsaved_changes_message">Tiene cambios sin guardar. ¿Desea salir sin guardar?</string>
    <string name="button_discard">Salir sin guardar</string>
    <string name="button_continue_editing">Continuar editando</string>

</resources>